# newsAgent

./: .env.template  .gitignore  README.md  langgraph.json  pyproject.toml
.github/workflows/: daily-news.yml
config/: sources.yaml
scripts/: run_daily.sh
src/news_agent/: __init__.py  config.py  graph.py  main.py  models.py  workflow.py
src/news_agent/nodes/: __init__.py  deduplicator.py  feishu_exporter.py  html_generator.py  newsapi_fetcher.py  output_generator.py  reddit_fetcher.py  rss_parser.py  social_search.py  summarizer.py  web_scraper.py
